version 1.7.6, in progress
- Fix bug: revise the way that list arguments to user-defined
  functions are handled, to avoid potential namespace 
  collisions
- Add menu item: Variable/Normality test
- Add $xlist accessor: gets the list of regressors from the
  last model
- Remove some redundant preferences items
- Fix bugs 1996156, 1996161, 2017872, 2027121
- MLE fixes
- Fix for RTF output from GUI model table
- Function package help: ensure this is not truncated
- Fix bug: incorrect generation of NAs when doing "genr unitdum" 
  on a sub-sampled panel dataset
- Add new panel data functions: pmax, pmin, pnobs
- Add $datatype accessor
- Internal: recode parts of the gretl GUI to avoid dependence
  on deprecated GTK APIs
- Several fixes for reading and writing gretl session files

6/13/2008 version 1.7.5
- max() and min() functions: extend the syntax to allow a list
  argument
- Reading CSV data: automatically substitute '_' for illegal
  characters in variable names
- Support DESTDIR for make install
- Add Weibull distribution to the various gretl probability
  distribution functions
- Fix for parsing a restriction with leading numerical term
- New functions: pdf, sdc, msortby
- User-defined functions: allow a descriptive string to
  accompany each parameter, for use in GUI
- Add $unit accessor to get a panel unit index
- Add "--breusch-pagan" option to lmtest command (with --robust
  option to use the Koenker robust variance estimator); also
  add this test to the GUI
- Fix some bugs in sub-sampling of panel datasets
- Revise the GUI for setting the sample range for panel data
- Improvements for panel time-series graphs
- Fix bug in importing data with long numeric observation 
  labels
- printf command: allow matrices in place of scalars (e.g.
  using "%f" or "%g" conversion)
- GUI script output window: add option of making output
  "sticky" (running a script appends to text)
- Add log-axis option to GUI graph editing dialog