@@ -29,6 +29,8 @@ typedef enum {
     R_T1,         /* start of current sample range */
     R_T2,         /* end of current sample range */
     R_DATATYPE,   /* dataset structure (x-section, time-series, panel) */
+    R_WINDOWS,    /* running on MS Windows (1) or not (0) */
+    R_VERSION,    /* gretl version number */
     R_DSET_MAX,   /* separator */
     R_TEST_STAT,  /* test statistic from last explicit test performed */
     R_TEST_PVAL,  /* p-value from last explicit test performed */
